fixed overflow bugs

--- a/public/less/style.less
+++ b/public/less/style.less
@@ -268,8 +268,6 @@ a {
   padding: 50px;
   margin: 20px;
   color: white;
-  text-overflow: ellipsis;
-  white-space: nowrap;
   overflow: hidden;
   text-align: center;
   font-family: 'Slackey';
